# Grace

./: .gitignore  .setup_assistant  CMakeLists.txt  README.md  grace.launch  grace.rviz  install.sh  moveit_listener.py  notes_for_motion_planning  notes_for_moveit.txt  onboard.launch  package.xml  platformio.ini  requirements.txt
arduino_control/: README.md  platformio.ini
arduino_control/src/: main.cpp
config/: fake_controllers.yaml  grace_arm_description.srdf  ompl_planning.yaml  ros_controllers.yaml
grace_arm_config/: .setup_assistant  package.xml
grace_arm_config/config/: kinematics.yaml  sensors_3d.yaml  simple_moveit_controllers.yaml
grace_arm_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  grace_arm_description_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
grace_arm_control/: package.xml
grace_arm_control/arduino_control/: platformio.ini
grace_arm_control/arduino_control/src/: main.cpp
grace_arm_control/launch/: arm_controller.launch
grace_arm_control/src/: arm_controller.py  fake_moveit_goal.py
grace_arm_description/: CMakeLists.txt  package.xml
grace_arm_description/config/: joint_names_grace_arm_description.yaml
grace_arm_description/launch/: display.launch
grace_arm_description/meshes/: base_link.STL  link_1.STL  link_2.STL  link_4.STL  link_5.STL  link_7.STL
grace_arm_description/urdf/: grace.urdf  grace_arm_description.urdf  grace_arm_description.urdf.xacro
grace_description/: CMakeLists.txt  package.xml
grace_description/config/: grace.srdf  ompl_planning.yaml
grace_description/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  grace_gazebo.launch
grace_figures/: CMakeLists.txt  package.xml
grace_figures/launch/: figures.launch  video_recorder.launch
grace_figures/src/: figures.py  video_saver.py
grace_grasping/: CMakeLists.txt  package.xml
grace_grasping/launch/: grasp.launch
grace_grasping/src/: get_object_pose_server.py  moveit_grasping.py  object_detection_server.py  yolo_to_tf.py
grace_grasping/srv/: GetObjectPose.srv  ObjectDetection.srv
grace_navigation/: CMakeLists.txt  package.xml
grace_navigation/config/: move_base_config.yaml  sim_move_base_config.yaml
grace_navigation/install/: change_pointcloud.sh  disable_yolo_spam.sh  install.sh  install_aws_robomaker.sh
grace_navigation/launch/: amcl.launch  explore.launch  gmapping.launch  grace.launch  grace_navigation.launch  minimal.launch  move_base_config.yaml  robot.launch.xml
grace_navigation/maps/: my_map.pgm  my_map.yaml  tutorial.yaml
grace_navigation/msg/: Object2D.msg  RangeBearing.msg  RobotGoalMsg.msg  RobotState.msg
grace_navigation/scripts/: bcolors.py  frontier_search.py  grace_navigation.py  grace_navigation_node.py  grace_node.py  py3_cv_bridge.py  semantic_slam.py  transform_server.py  yolo_detect.py
grace_navigation/scripts/utils/: __init__.py  marker.py
grace_navigation/srv/: Transform.srv
grace_planar_execution/: CMakeLists.txt  package.xml
grace_planar_execution/src/: execute_planar.py  planar_pure_pursuit.py
install/: bash_template.sh  change_pointcloud.sh  install.sh  install_aws_robomaker.sh  install_frontier.sh  install_moveit.sh  install_ros_deps.sh
launch/: amcl.launch  arm_controller.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  explore.launch  frontier.launch  gazebo.launch  gmapping.launch  grace.launch  move_base_config.yaml  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planar_execution.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
maps/: my_map.pgm  my_map.yaml  tutorial.pgm  tutorial.yaml
meshes/: link_3.STL  link_6.STL  link_8.STL
msg/: FrontierList.msg  Object2D.msg  RangeBearings.msg  RobotGoalMsg.msg  RobotState.msg
scripts/: add_marker.py  frontier_search.py  frontier_search_old.py  grace_navigation.py  grace_node.py  semantic_slam.py  semantic_slam_marker.py  slam_controller.py  transform.py  ultralytics_patch.py  yolo_detect.py
src/: arm_angles_converter.py  arm_controller.py  frontier_exploration.py  frontier_search.py  main.cpp  movement_test.py  planar_pure_pursuit.py  trajectory_utils.py
urdf/: grace.urdf  grace_arm_description.csv  grace_arm_description.urdf  grace_arm_description.urdf.xacro
