<?xml version="1.0"?>
<package format="2">
  <name>grace</name>
  <version>0.1.0</version>
  <description>The grace package</description>

  <maintainer email="abeck@wpi.edu">Alexander</maintainer>
  <license>MIT</license>


  <url type="repository">https://github.com/BrentWeiffenbach/Grace</url>

  <author email="abeck@wpi.edu">Alexander Beck</author>
  <author email="bweiffenbach@wpi.edu">Brent Weiffenbach</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
