<?xml version="1.0"?>
<package format="2">
  <name>grace_description</name>
  <version>0.0.0</version>
  <description>The grace_description package</description>

  <maintainer email="rweiff2022@gmail.com">Brent Weiffenbach</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/grace_description</url> -->

  <author email="rweiff2022@gmail.com">Brent Weiffenbach</author>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
