<?xml version="1.0"?>
<package format="2">
  <name>grace_grasping</name>
  <version>0.0.0</version>
  <description>The grace_grasping package</description>

  <maintainer email="rweiff2022@gmail.com">Brent Weiffenbach</maintainer>

  <license>MIT</license>


  <url type="repository">https://github.com/BrentWeiffenbach/Grace</url>

  <author email="abeck@wpi.edu">Alexander Beck</author>
  <author email="rweiff2022@gmail.com">Brent Weiffenbach</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
