<?xml version="1.0"?>
<package format="2">
  <name>grace_planar_execution</name>
  <version>0.0.0</version>
  <description>The grace_planar_execution package</description>

  <maintainer email="rweiff2022@gmail.com">Brent Weiffenbach</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/grace_planar_execution</url> -->

  <author email="rweiff2022@gmail.com">Brent Weiffenbach</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
